# python-generics-study

./: README.md  pyproject.toml
python_generics_study/: main.py
